modify `GET reports` api to query all reports with basic field options
