# app/server/src/services/reports.service.ts
@@ -26,15 +26,7 @@ import ReportStatusDTO from '@dtos/ReportStatusDTO';
 import KpiDTO from '@dtos/KpiDTO';
 
 const ReportService = {
-  async findAllReports(
-    projectId: string,
-    year: number,
-    quarter: Quarter,
-    last: boolean,
-  ): Promise<Report[]> {
-    const params = { projectId };
-    if (year) Object.assign(params, { year });
-    if (quarter) Object.assign(params, { quarter });
+  async findAllReports(last: boolean, params?: Record<string, any>): Promise<Report[]> {
     let query = ReportModel.find(params).populate({ path: 'submitter' });
     if (last) {
       query = query.sort({ createdAt: -1 }).limit(1);
